# sdk-webassembly-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  tests.rs  types.rs  wit_gen.rs
src/__internal/: mod.rs  wasm.rs
